syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option java_multiple_files =  true;

package com.asy.tests.grpc.proto.user;

message CreateUserRequest {
  int32 id = 1;
  string name = 2;
  string email = 3;
  UserType type = 4;
  google.protobuf.Timestamp birthdate = 5;
  bool active = 6;
  repeated string numbers = 7;
}

enum UserType {
  STANDARD = 0;
  PAID = 1;
  VIP = 2;
}

message CreateUserResponse {
  int32 status = 1;
  string message = 2;
}

message UserListResponse {
  repeated UserResponse users = 1;
}

message UserResponse {
  string name = 1;
  bool active = 2;
}

service UserService {
  rpc createUser(CreateUserRequest) returns (CreateUserResponse) {}

  rpc listAll(google.protobuf.Empty) returns (UserListResponse) {}
}